// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CpsRelatedContent should render Story Feature components when given appropriate data 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="features-analysis-heading"
    class="GridWrapper-sc-12lwanc-0 hgpaqH"
    data-e2e="related-content"
    role="region"
  >
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 LegacyGridItemConstrainedLarge-opyob2-1 curbRF"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 jpnPtT"
      >
        <div
          class="Bar-sc-1x4gwjz-0 jsgdXU"
        />
        <h2
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 cERxQI"
                dir="ltr"
                id="features-analysis-heading"
              >
                Informate me
              </span>
            </span>
          </span>
        </h2>
      </div>
      <ul
        class="StoryPromoUl-sc-171lqjd-2 brjIMO"
        role="list"
      >
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 burCNM"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/igbo/afirika-23252735"
                >
                  STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                This is a test asset used in Simorgh, please do not edit it without asking.
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
        <li
          class="StoryPromoLiBase-sc-171lqjd-0 StoryPromoLi-sc-171lqjd-1 burCNM"
          role="listitem"
        >
          <div
            class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
          >
            <div
              class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
              dir="ltr"
            >
              <div
                class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
              >
                <div
                  class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
                >
                  <div
                    class="lazyload-placeholder"
                  />
                </div>
                <div
                  class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
                />
              </div>
            </div>
            <div
              class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
              dir="ltr"
            >
              <h3
                class="Headline-sc-1dvfmi3-3 hSJrur"
              >
                <a
                  class="Link-sc-1dvfmi3-5 jeUMCT"
                  href="/igbo/afirika-49666505"
                >
                  Robert Mugabe: Zimbabwe eferela nwa amadi a aka
                </a>
              </h3>
              <p
                class="Summary-sc-1dvfmi3-4 eaCWBB"
              >
                Gọọmentị nakwa ndị Zimbabwe pụtara n'igwe iji kwanyere aka chịburu ha bụ Robert Mugabe ugwu ikpeazụ ya na Harare.
              </p>
              <time
                class="StyledTimestamp-um718p-0 kVWTyt"
                datetime="2020-02-03"
              >
                3rd February 2020
              </time>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </section>
</DocumentFragment>
`;

exports[`CpsRelatedContent should render Story Promo components without <ul> when given single item in collection 1`] = `
<DocumentFragment>
  <section
    aria-labelledby="features-analysis-heading"
    class="GridWrapper-sc-12lwanc-0 hgpaqH"
    data-e2e="related-content"
    role="region"
  >
    <div
      class="GridItemConstrainedLarge-sc-12lwanc-4 LegacyGridItemConstrainedLarge-opyob2-1 curbRF"
    >
      <div
        class="SectionLabelWrapper-sc-1x4gwjz-1 hsirkD StyledSectionLabel-opyob2-2 jpnPtT"
      >
        <div
          class="Bar-sc-1x4gwjz-0 jsgdXU"
        />
        <h2
          class="Heading-sc-1x4gwjz-2 eZofTG"
        >
          <span
            class="FlexColumn-wx5kdp-0 dgpsiS"
          >
            <span
              class="FlexRow-wx5kdp-2 dVBNyZ"
            >
              <span
                class="Title-wx5kdp-4 cERxQI"
                dir="ltr"
                id="features-analysis-heading"
              >
                Informate me
              </span>
            </span>
          </span>
        </h2>
      </div>
      <div
        class="SingleContentWrapper-opyob2-3 gppAKd"
      >
        <div
          class="StoryPromoWrapper-sc-1dvfmi3-0 buBJys"
        >
          <div
            class="ImageGridItem-sc-1xk56cj-0 fNYKlW"
            dir="ltr"
          >
            <div
              class="ImageContentsWrapper-sc-1dvfmi3-1 cinwNl"
            >
              <div
                class="ImagePlaceholder-sc-11u25v2-0 _StyledImagePlaceholder-gu1fm2-0 kvTWeV"
              >
                <div
                  class="lazyload-placeholder"
                />
              </div>
              <div
                class="ImageOverlayWrapper-sc-1dvfmi3-2 dqBekx"
              />
            </div>
          </div>
          <div
            class="TextGridItem-sc-1lkbq5i-0 jbyRcL"
            dir="ltr"
          >
            <h3
              class="Headline-sc-1dvfmi3-3 hSJrur"
            >
              <a
                class="Link-sc-1dvfmi3-5 jeUMCT"
                href="/igbo/afirika-23252735"
              >
                STY - Ọrụ bekee na ịrụrụ onwe gị ọrụ, kedụ nk?
              </a>
            </h3>
            <p
              class="Summary-sc-1dvfmi3-4 eaCWBB"
            >
              This is a test asset used in Simorgh, please do not edit it without asking.
            </p>
            <time
              class="StyledTimestamp-um718p-0 kVWTyt"
              datetime="2020-02-03"
            >
              3rd February 2020
            </time>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
